--- a/package.json
+++ b/package.json
@@ -6,11 +6,19 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "echarts": "^5.4.3",
+    "json-server": "^0.17.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -25,6 +33,7 @@
       "react-app/jest"
     ]
   },
+  "proxy": "http://localhost:3001",
   "browserslist": {
     "production": [
       ">0.2%",
